--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 <html>
 	<head>
+		<title>CCI Patient Flow App</title>
+		<link rel='stylesheet' href='style.css'/>
 	</head>
 	<body>
-		CCI Statin
+		<button id='menuopenbutton'
+			onclick="document.getElementById('menu').style.display='block';"
+		><img src='menu512.png'></button>
+		<div id='menu'>
+			<button id='menuclosebutton'
+				onclick="document.getElementById('menu').style.display='none';"
+			>X</button>
+			<img src='cci-logo.png'>
+			<hr>
+			<a href=''>Aspirin</a>
+			<a href=''>Blood Pressure</a>
+			<a href=''>Cholesterol</a>
+			<a href=''>Smoking</a>
+		</div>
+		<div id='content'>
+			<img src='cci-logo.png' id='logo'>
+			<img src='blueplusrule.png' class='rule'>
+			<a href=''>Aspirin</a><br>
+			<a href=''>Blood Pressure</a><br>
+			<a href=''>Cholesterol</a><br>
+			<a href=''>Smoking</a><br>
+		</div>
+		<div id='copyright'>
+			By using this application, you agree to the end user <a href='terms.html'>terms and conditions</a>.
+			<br>
+			Copyright &copy;2015 Care Coordination Institute. All rights reserved.
+		</div>
 	</body>
 </html>
