--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<option value='hi'>High</option>
 						<option value='modr'>Mod OK</option>
 						<option value='hir'>Mod/Hi OK</option>
-					</td><td><button type='button'>Explain</button></td></tr>
+					</td><td><button type='button'>?</button></td></tr>
 				</table>
 			</div>
 			
