--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
 		<script language='javascript' src='scripts.js'></script>
 	</head>
 	<body onload='resize();'>
-		<button id='menuopenbutton'
-			onclick="document.getElementById('menu').style.display='block';"
-		><img src='menu512.png'></button>
+		<button id='menuopenbutton' onclick="document.getElementById('menu').style.display='block';"><img src='menu512.png' alt='&equiv;'></button>
 		<div id='menu'>
-			<button id='menuclosebutton'
-				onclick="document.getElementById('menu').style.display='none';"
-			>X</button>
+			<button id='menuclosebutton' onclick="document.getElementById('menu').style.display='none';">&times;</button>
 			<img src='cci-logo.png'>
 			<hr>
 			<a href='' onclick="return show('patient');">Current Patient</a>
